--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "primer",
+  "name": "twitbeat",
   "version": "0.0.1",
-  "description": "A ReactJS primer rpo with focus on idiomatic principles and the component life cycle",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "engines": {
     "node": "0.12.3",
     "npm": "2.9.1"
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TucsonReactJS/primer.git"
+    "url": "https://github.com/TucsonReactJS/twitbeat.git"
   },
   "keywords": [
     "reactjs",
@@ -24,9 +24,9 @@
   "author": "Charles King",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TucsonReactJS/primer/issues"
+    "url": "https://github.com/TucsonReactJS/twitbeat/issues"
   },
-  "homepage": "https://github.com/TucsonReactJS/primer",
+  "homepage": "https://github.com/TucsonReactJS/twitbeat",
   "dependencies": {
     "autoprefixer": "^5.2.0",
     "babel": "^5.5.8",
