--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "classnames": "^2.1.2",
+    "clone": "^1.0.2",
     "debug": "^2.2.0",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
@@ -56,7 +57,7 @@
     "koa-router": "^4.3.2",
     "koa-send": "^1.3.1",
     "koa-static": "^1.4.9",
-    "lodash": "^3.9.3",
+    "lodash": "^3.10.0",
     "mongoose": "^4.0.6",
     "node-jsx": "^0.13.3",
     "passport-local": "^1.0.0",
@@ -67,6 +68,7 @@
     "superagent": "^1.2.0",
     "thunkify-wrap": "^1.0.4",
     "underscore": "^1.8.3",
-    "webpack": "^1.8.9"
+    "webpack": "^1.8.9",
+    "wrappy": "^1.0.1"
   }
 }
