--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "react": "^0.13.2",
     "save-to": "^1.0.3",
     "serialize-javascript": "^1.0.0",
+    "socket.io": "^1.3.6",
     "superagent": "^1.2.0",
     "thunkify-wrap": "^1.0.4",
+    "twit": "^2.1.0",
     "underscore": "^1.8.3",
     "webpack": "^1.8.9",
     "wrappy": "^1.0.1"
