--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^5.1.4",
     "classnames": "^2.1.2",
     "clone": "^1.0.2",
+    "co-views": "^1.0.0",
     "debug": "^2.2.0",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
@@ -66,6 +67,7 @@
     "save-to": "^1.0.3",
     "serialize-javascript": "^1.0.0",
     "superagent": "^1.2.0",
+    "swig": "^1.4.2",
     "thunkify-wrap": "^1.0.4",
     "underscore": "^1.8.3",
     "webpack": "^1.8.9",
