--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "homepage": "https://github.com/TucsonReactJS/twitbeat",
   "dependencies": {
     "autoprefixer": "^5.2.0",
-    "babel": "^5.5.8",
-    "babel-core": "^5.5.8",
-    "babel-loader": "^5.1.4",
+    "babel": "^5.6.10",
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.2.2",
     "classnames": "^2.1.2",
     "clone": "^1.0.2",
     "co-views": "^1.0.0",
@@ -64,6 +64,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "react": "^0.13.2",
+    "react-sparkline": "^1.0.1",
+    "react-sparklines": "^1.0.2",
     "save-to": "^1.0.3",
     "serialize-javascript": "^1.0.0",
     "superagent": "^1.2.0",
