forgot to save howler dependency

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-webpack": "^1.5.0",
+    "howler": "^1.1.26",
     "koa": "^0.20.0",
     "koa-bodyparser": "^2.0.0",
     "koa-compress": "^1.0.8",
